# geometry3cpp

./: .gitignore  CMakeLists.txt  README.md  StartVS2015_Debug.bat  StartVS2015_Release.bat  StartVS2017_Debug.bat  StartVS2017_Release.bat  UpdateVS_Debug_2015.bat  UpdateVS_Debug_2017.bat  UseFrame3.cmake
cmake/: FindLIBIGL.cmake  PCHSupportV3.cmake
src/: CMakeLists.txt  compile_tests.cpp  geometry3PCH.cpp  geometry3PCH.h
src/cinterface/: CMeshIO.cpp  CMeshIO.h  CTriangulation.cpp  CTriangulation.h  cinterface.h  cinterface_internal.h
src/geometry/: BaseInterfaces.h  Frame3.cpp  Frame3.h  GeometryInterfaces.h  MeshUtil.cpp  MeshUtil.h  PackedLines.cpp  PackedLines.h  PackedMesh.cpp  PackedMesh.h  SpatialQueryTypes.h  VectorUtil.cpp  VectorUtil.h  eigen_MatrixBase_AddOns.h  g3stream.cpp  g3types.h
src/mesh/: DMesh3.cpp  DMesh3.h  DMesh3Builder.h  DSurface.h  MaterialTypes.h  MeshConstraints.h  MeshContour.h  MeshGenerators.cpp  MeshGenerators.h  MeshIO.h  MeshQueries.h  MeshRefinerBase.h  MeshSubdivider.cpp  MeshSubdivider.h  OBJReader.h  OBJWriter.h  Remesher.h
src/spatial/: BasicProjectionTargets.h  DMeshAABBTree3.cpp  DMeshAABBTree3.h  SpatialInterfaces.h
src/util/: IDMap.h  ProgressCancel.h  atomic_util.h  dvector.h  dvector_util.h  file_util.h  fixed_list.h  g3Colors.cpp  g3Colors.h  g3Config.h  g3Debug.cpp  g3Debug.h  g3Test.h  g3platform.h  index_util.h  iterator_util.h  object_pool.h  parallel_util.h  parse_util.h  profile_util.h  rcvector.h  refcount_vector.h  small_list_set.h  sparse_dvector.h  string_util.h
test/: CMakeLists.txt  main.cpp
